[package]
name = "tokio-simple-scheduler"
description = "A very simple scheduler for Tokio"
license = "MIT"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/brettmayson/tokio-simple-scheduler"

[dependencies]
cron = "0.12.0"
chrono = "0.4.23"
tokio = { version = "1.21.2", features = ["time", "macros", "rt","rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt", "time", "macros", "rt-multi-thread"] }
