[package]
name = "wasmtime_hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "13.0.0"
wasmtime-wasi="13.0.0"
#wasmtime = { path = "crates/wasmtime", version = "14.0.0", default-features = false }
#anyhow = { version = "1.0", default-features = false }
anyhow = "1.0.22"
